# Mythril

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: mythrilConfig.cmake.in
docs/: getting_started.md
include/mythril/: CTX.h  CTXBuilder.h  ObjectHandles.h  Objects.h  RenderGraphBuilder.h  RenderGraphDescriptions.h  Specs.h  SwapchainSpec.h  shader_types.h  vkenums.h
lib/: CTX.cpp  CTX.h  CTXBuilder.cpp  CommandBuffer.cpp  CommandBuffer.h  Constants.h  DescriptorAllocatorGrowable.cpp  DescriptorAllocatorGrowable.h  DescriptorWriter.cpp  DescriptorWriter.h  FastVector.h  GraphicsPipeline.h  GraphicsPipelineBuilder.h  HelperMacros.h  Holder.h  ImmediateCommands.cpp  ImmediateCommands.h  Invalids.h  Logger.h  ObjectHandles.h  Objects.cpp  PipelineBuilder.cpp  PipelineBuilder.h  Pipelines.h  Plugins.h  RenderGraphBuilder.cpp  RenderGraphBuilderEXT.cpp  RenderGraphDescriptions.h  RenderGraphInternal.h  RenderPipeline.h  Shader.cpp  Shader.h  SlangCompiler.cpp  SlangCompiler.h  Specs.h  StagingDevice.cpp  StagingDevice.h  SubmitHandle.h  Swapchain.cpp  Swapchain.h  (+12 more)
lib/faststl/: FastVector.h  StackString.h  StackVector.h
lib/plugins/: ImGuiPlugin.cpp  TracyGPUPlugin.cpp  TracyPlugin.cpp
samples/: 01_ClearWindow.cpp  02_Cube.cpp  03_CubeMSAA.cpp  04_PostProcessingCube.cpp  05_ImGui.cpp  06_CustomShader.cpp  CMakeLists.txt  SDL3Usage.h
samples/01_ClearWindow/: main.cpp
samples/02_Cube/: GPUStructs.h  main.cpp
samples/03_CubeMSAA/: BasicRed.slang  GPUStructs.h  main.cpp
samples/04_PostProcessingCube/: BasicRed.slang  FullscreenPost.slang  GPUStructs.h  main.cpp
samples/05_ImGui/: main.cpp
samples/06_ComplexShader/: GPUStructs.h  Marble.slang  main.cpp
samples/06_CustomShader/: GPUStructs.h  GaussianBlur.slang  Marble.slang  main.cpp
samples/07_CompleteScene/: Helpers.h  HostStructs.h  Primitives.h  main.cpp
samples/07_CompleteScene/meshes/: shape.glb
samples/07_CompleteScene/shaders/: Adaptation.slang  BloomCompute.slang  BrightCompute.slang  CompositeBloom.slang  ConversionLuminance.slang  DepthLinearization.slang  DirectionalShadow.slang  Downsample.slang  FullscreenComposite.slang  GPUStructs.slang  GaussianBlur.slang  HBAOBlur.slang  HBAORaw.slang  Particles.slang  PointShadow.slang  RedDebug.slang  Sky.slang  Standard.slang  Upsample.slang  Upsample2.slang
samples/07_HDR/: BloomCompute.slang  BrightExtraction.slang  Fullscreen.slang  FullscreenVertex.slang  GPUStructs.h  GPUStructs.slang  HostStructs.h  Shadow.slang  Standard.slang  arrow.glb  main.cpp
samples/assets/shaders/: BasicRed.slang  ComplexRed.slang  FullscreenPost.slang  test.spv
samples/assets/shaders/Common/: Common.Sets.slang
samples/assets_ext/shaders/: ComplexRed.slang  ComplexRedT.slang  docs.slang
samples/cmake/: CopyAssets.cmake
tests/: CMakeLists.txt  basic.cpp  test_compute.cpp  test_context.cpp  test_fixtures.h  test_handle_pool.cpp  test_pipelines.cpp  test_render_graph.cpp  test_rendering.cpp  test_resources.cpp  test_specs.cpp
tests/shaders/: NoopCompute.slang  Passthrough.slang  PushConstantTriangle.slang  SimpleCompute.slang  TestGPUStructs.h
